[package]
name = "tinypng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1", default-features = false, features = ["zlib-ng-compat"] }

[dev-dependencies]
show-image = "0.10"

[[test]]
name = "pngtests"
path = "pngtests/main.rs"
harness = false

[profile.release]
codegen-units = 1
debug = true
incremental = false
lto = true
opt-level = 3
panic = "abort"
debug-assertions = false

[profile.test]
codegen-units = 1
debug = true
incremental = false
lto = true
opt-level = 3
debug-assertions = false
overflow-checks = false
